tests/models/enum/unnamed/u16/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        u16
    ),
}
fn main() {}
